Various Style Fixes/Changes For Archives on Mobile (#165)
* Add header button for archives on mobile

* Fix mobile styles for archived boards page

* Fix styles on archived board page

* Refactor header component to use the top header component

* Fix the bottom header on the archived board page

* Fix guide buttons to take up 1/3 of width on the archived board page

--- a/ui/src/app/modules/teams/components/top-header/top-header.component.scss
+++ b/ui/src/app/modules/teams/components/top-header/top-header.component.scss
@@ -32,9 +32,9 @@
   padding-right: $global-side-padding;
 
   @media only screen and (max-width: 610px) {
-    height: 44px;
+    height: 36px;
     min-width: 0;
-    padding-bottom: 6px;
+    padding-bottom: 0;
     padding-left: 6px;
     padding-right: 6px;
     width: 100%;
@@ -50,7 +50,6 @@
     width: 100%;
 
     @media only screen and (max-width: 610px) {
-      height: 32px;
       min-width: 0;
       width: 100%;
     }
@@ -58,11 +57,16 @@
     .horizontal-separator {
       background-color: $wet-asphalt;
       border-radius: 2px;
-      height: 35%;
-      margin-left: 24px;
+      box-sizing: border-box;
+      height: 28px;
+      margin: 0 24px;
       opacity: .1;
-      padding-top: 12px;
-      width: 3px;
+      width: 2px;
+
+      @media only screen and (max-width: 610px) {
+        height: 16px;
+        margin: 0 12px;
+      }
 
       &.dark-theme {
         background-color: $count-separator-background-dark;
@@ -75,29 +79,31 @@
       margin: 0;
       padding: 0;
 
+      @media only screen and (max-width: 610px) {
+        height: 24px;
+      }
+
       #logo {
         height: inherit;
       }
     }
 
     #teamName {
-      color: opacity($wet-asphalt, .8);
+      color: inherit;
       font-size: 1.5rem;
-      margin-left: 24px;
       overflow: hidden;
       text-overflow: ellipsis;
-
-      &.dark-theme {
-        color: opacity($clouds, .75);
-      }
 
       @media only screen and (max-width: 610px) {
         font-size: 1rem;
       }
+
+      &.dark-theme {
+        color: opacity($clouds, .75);
+      }
     }
 
     .last-saved-text {
-      color: $wet-asphalt;
       flex: 1;
       font-size: .8rem;
       opacity: .5;
